CHANGELOG
=========

0.7.0
-----

* Add `Result`
* Moved `Maybe` to `net.kemitix.mon.maybe.Maybe`
* Add `Maybe.stream()`
* Deprecate `Maybe.fromOptional(Optional)`

0.6.0
-----

* Java 9 compatible
* Upgrade `assertj` to 3.9.1
* jenkins: add Coverage stage
* jenkins: split Reporting stage into Test Results and Archiving
* jenkins: remove java 9 testing from `develop` branch

0.5.1
-----

* Fix accidental merge with SNAPSHOT version in to master

0.5.0
-----

* Add `Before`, `After` and `Around` combinators
* Use `kemitix-maven-tiles`
* Add `BeanBuilder` experiment
* Upgrade `lombok` to 1.16.20
* Upgrade assertj to 3.9.1

0.4.0
-----

* Restore public access for `TypeAlias.getValue()`
* Add `Maybe`, `Just`, `Nothing`

0.3.0
-----

* `TypeAlias.getValue()` removed in favour of using `map()`

0.2.0
-----

* `TypeAlias.getValue()` is not `final`
* Added `TypeAlias.map()`
* `Mon.map()` and `Mon.flatMap()` are `final`
* Codacy Quality clean up

0.1.0
-----

* Add `TypeAlias<T>`
* Add `Functor<T>`
* Add `Identity<T>`
* Add `Mon<T>`